feat(ordens-servico): adiciona abertura de OS com itens
